[package]
name = "mostro-cli"
version = "0.8.2"
edition = "2021"
license = "MIT"
authors = [
  "Francisco Calderón <fjcalderon@gmail.com>",
  "Baba O'reily <pinballwizard@nostr.red>",
]
description = "Mostro P2P cli client"
homepage = "https://github.com/MostroP2P/mostro-cli"
repository = "https://github.com/MostroP2P/mostro-cli"

[lib]
name = "mostro_client"
path = "src/lib.rs"

[[bin]]
name = "mostro-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
nostr-sdk = "0.24.0"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
comfy-table = "7.0.1"
chrono = "0.4.23"
log = "0.4.17"
futures = "0.3"
uuid = { version = "1.3.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
dotenvy = "0.15.6"
lightning-invoice = "0.23.0"
reqwest = { version = "0.11", features = ["json"] }
mostro-core = "0.4.5"
bitcoin_hashes = "0.12.0"
lnurl-rs = "0.4.0"
