[package]
name = "mostro-cli"
version = "0.12.0"
edition = "2021"
license = "MIT"
authors = [
  "Francisco Calderón <fjcalderon@gmail.com>",
  "Baba O'reily <pinballwizard@nostr.red>",
]
description = "Mostro P2P cli client"
homepage = "https://mostro.network"
repository = "https://github.com/MostroP2P/mostro-cli"

[lib]
name = "mostro_client"
path = "src/lib.rs"

[[bin]]
name = "mostro-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
nostr-sdk = { version = "0.43.0", features = ["nip06", "nip44", "nip59"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
comfy-table = "7.2.0"
chrono = "0.4.41"
log = "0.4.27"
futures = "0.3"
uuid = { version = "1.18.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
dotenvy = "0.15.6"
lightning-invoice = { version = "0.33.2", features = ["std"] }
reqwest = { version = "0.12.23", features = ["json"] }
mostro-core = "0.6.49"
lnurl-rs = "0.9.0"
pretty_env_logger = "0.5.0"
openssl = { version = "0.10.73", features = ["vendored"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
bip39 = { version = "2.2.0", features = ["rand"] }
dirs = "6.0.0"
