[package]
name = "mostro-cli"
version = "0.14.2"
edition = "2021"
license = "MIT"
authors = [
  "Francisco Calderón <fjcalderon@gmail.com>",
  "Baba O'reily <pinballwizard@nostr.red>",
]
description = "Mostro P2P cli client"
homepage = "https://mostro.network"
repository = "https://github.com/MostroP2P/mostro-cli"

[lib]
name = "mostro_client"
path = "src/lib.rs"

[[bin]]
name = "mostro-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
nostr-sdk = { version = "0.43.0", features = ["nip06", "nip44", "nip59"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
comfy-table = "7.2.1"
chrono = "0.4.42"
log = "0.4.28"
futures = "0.3"
uuid = { version = "1.18.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
dotenvy = "0.15.6"
lightning-invoice = { version = "0.33.2", features = ["std"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json","rustls-tls"] }
mostro-core = "0.6.56"
lnurl-rs = { version = "0.9.0", default-features = false, features = ["ureq"] }
pretty_env_logger = "0.5.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
bip39 = { version = "2.2.0", features = ["rand"] }
dirs = "6.0.0"

[package.metadata.release]
# (Default: true) Set to false to prevent automatically running `cargo publish`.
publish = true
# (Default: true) Set to false to prevent automatically pushing commits and tags to the Git remote.
push = true
# (Default: true) Run `cargo test` before release? Highly recommended.
verify = true
# (Default: true) Create a Git tag for the release (e.g., v0.2.1)? You usually want this.
tag = true
# (Default: false) Sign the release commit with GPG?
sign-commit = true
# (Default: false) Sign the release tag with GPG?
sign-tag = true
# Generate CHANGELOG.md before creating the release tag (only during actual release, not dry-run)
pre-release-hook = [
  "sh",
  "-c",
  "rm -f CHANGELOG.md && GITHUB_TOKEN=\"${GITHUB_TOKEN:-}\" git cliff --unreleased --github-repo MostroP2P/mostro-cli -o CHANGELOG.md --tag {{version}} && if [ \"$DRY_RUN\" = \"true\" ]; then echo \"DRY RUN: Skip add/commit\"; else (git diff --quiet CHANGELOG.md || git add CHANGELOG.md && git commit -m \"Update CHANGELOG for version {{version}}\"); fi",
]

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.1"
rstest = "0.26.1"
